syntax = "proto3";

option csharp_namespace = "TaskManagementService";

service CheckHealth {
  rpc CheckHealth (HealthRequest) returns (HealthResponse);
}

message HealthRequest {

}

message HealthResponse {
  string healthMeassage = 1;
}